WIP: Fix icon alignment
Obsolete once we've properly fixed the <p> in <p> Markdown rendering in
the master branch.

--- a/modules/monitoring/public/css/module.less
+++ b/modules/monitoring/public/css/module.less
@@ -1,5 +1,13 @@
 /*! Icinga Web 2 | (c) 2014 Icinga Development Team | GPLv2+ */
 
+.overview-plugin-output {
+  white-space: normal !important;
+
+  > p {
+    margin: 0;
+  }
+}
+
 // Styles for the bottom status bar in the host and service list views
 .monitoring-statusbar-ghost {
   display: block;
